.metadata/.plugins/org.eclipse.cdt.ui/Lab2_Both.build.log
10:25:18 **** Incremental Build of configuration Debug for project Lab2_Both ****
make -j7 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L4S5xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:111:41: warning: implicit declaration of function 'Read_TEMP' [-Wimplicit-function-declaration]
  111 |                                  temp = Read_TEMP(VREF);
      |                                         ^~~~~~~~~
../Core/Src/main.c:121:33: warning: implicit declaration of function 'Read_VREF' [-Wimplicit-function-declaration]
  121 |                          VREF = Read_VREF();
      |                                 ^~~~~~~~~
../Core/Src/main.c:185:13: error: invalid storage class for function 'MX_ADC1_Init'
  185 | static void MX_ADC1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:245:13: error: invalid storage class for function 'MX_GPIO_Init'
  245 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
../Core/Src/main.c:94:9: warning: variable 'RESULT' set but not used [-Wunused-but-set-variable]
   94 |   float RESULT = 0;
      |         ^~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:51:13: warning: 'MX_GPIO_Init' used but never defined
   51 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:52:13: warning: 'MX_ADC1_Init' used but never defined
   52 | static void MX_ADC1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:283:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  283 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:245:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  245 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:185:13: warning: 'MX_ADC1_Init' defined but not used [-Wunused-function]
  185 | static void MX_ADC1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:134:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  134 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j7 all" terminated with exit code 2. Build might be incomplete.

10:25:18 Build Failed. 4 errors, 9 warnings. (took 580ms)

